feat(sweeper): expose internal send_at functionality on api too
